--- a/foodApp/src/assets/main.css
+++ b/foodApp/src/assets/main.css
@@ -1,4 +1,7 @@
 @import './base.css';
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 #app {
   max-width: 1280px;
@@ -10,7 +13,7 @@
 a,
 .green {
   text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
+  color: rgb(215, 232, 226);
   transition: 0.4s;
   padding: 3px;
 }
