Adjusted the visual elements

--- a/foodApp/src/assets/main.css
+++ b/foodApp/src/assets/main.css
@@ -2,7 +2,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+/* 
 body {
   background-color: rgb(34, 40, 44);
   color: rgb(215, 232, 226);
@@ -43,4 +43,4 @@ a,
     grid-template-columns: 1fr 1fr;
     padding: 0 2rem;
   }
-}
+} */
